--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "lavalink-vps",
-    "version": "0.0.1",
-    "main": "app.js",
-    "author": "vaibhav",
-    "license": "MIT",
-    "dependencies": {
-      "got": "^11.8.1"
-    },
-    "scripts": {
-     "start": "bash start.sh"
-    }
+  "name": "lavalink-vps",
+  "version": "1.0.1",
+  "main": "app.js",
+  "author": "vaibhav",
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "got": "^11.8.1"
+  },
+  "scripts": {
+   "start": "bash start.sh"
   }
-  
+}
